Bug 107436 comment 46: [IDE] navigator: show file/folder in "Windows Explorer", Finder, Nautilus, ...
- fixed quoting and added ${selected_resource_uri} variable
- changed mnemonic to 'x' (less likely to conflict with view names)